unpackaged/objects/ApexClass__c.object
<CustomObject>
    <fields>
        <fullName>ApexClassTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apex Class Test</label>
        <referenceTo>ApexClass__c</referenceTo>
        <relationshipLabel>Apex Classes</relationshipLabel>
        <relationshipName>Apex_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApexTest__c</fullName>
        <externalId>true</externalId>
        <label>Apex Test</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apex__c</fullName>
        <externalId>true</externalId>
        <label>Apex</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateUpdate__c</fullName>
        <label>Date Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DesignPattern__c</fullName>
        <label>Design Pattern</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Business Object</fullName>
                </value>
                <value>
                    <fullName>Data Access Object</fullName>
                </value>
                <value>
                    <fullName>Util</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinesCovegare__c</fullName>
        <label>Lines Covegare</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lines__c</fullName>
        <label>Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberError__c</fullName>
        <label>Number Error</label>
        <summaryForeignKey>ApexClassMessage__c.ApexClass__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Apex Classes</relationshipLabel>
        <relationshipName>Apex_Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Apex Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Package__c</columns>
        <columns>DesignPattern__c</columns>
        <columns>NumberError__c</columns>
        <columns>LinesCovegare__c</columns>
        <columns>Lines__c</columns>
        <columns>Coverage__c</columns>
        <columns>DateUpdate__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Apex Class</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>